<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_selection"
        android:layout_gravity="center_horizontal"
        android:textSize="32dp"
        android:textColor="#E516ED"
        android:textStyle="bold|italic"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/Barbell_Bench_Press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/Barbell_Bench_Press"
            />
        <RadioButton
            android:id="@+id/Flat_Bench_Dumbbell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/Flat_Bench_Dumbbell"
            />
        <RadioButton
            android:id="@+id/Low_Incline_Barbell_Bench"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/Low_Incline_Barbell_Bench"
            />
        <RadioButton
            android:id="@+id/One_Arm_High_Cable_Curl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/One_Arm_High_Cable_Curl"
            />
        <RadioButton
            android:id="@+id/Standing_Cable_Curl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/Standing_Cable_Curl"
            />
        <RadioButton
            android:id="@+id/Smith_Machine_Drag"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/Smith_Machine_Drag"
            />
        <RadioButton
            android:id="@+id/Barbell_Overhead_Shoulder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/Barbell_Overhead_Shoulder"
            />
        <RadioButton
            android:id="@+id/Reverse_Pec_Deck_Fly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/Reverse_Pec_Deck_Fly"
            />
        <RadioButton
            android:id="@+id/Push_Press"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/Push_Press"
            />
        <RadioButton
            android:id="@+id/Barbell_Deadlift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/Barbell_Deadlift"
            />

    </LinearLayout>

    <Button
        android:id="@+id/exerciseStart"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="start"
        android:background="@drawable/shape"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>